examples/neg/issue365.effekt
extern interface Cap

// purposefully not pure to trigger a bug
extern io def cap(): Cap at {} = default { <> }

def main() = {
  def myCap = cap()
  val unboxed: Cap at {} = myCap;
  ()
}